--- a/jsaqa-code/7.4/puppeteer/package.json
+++ b/jsaqa-code/7.4/puppeteer/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "jsaqa_3_3",
+  "name": "c",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -9,8 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.3.1",
-    "jest-puppeteer": "^6.0.0",
-    "puppeteer": "^13.3.2"
+    "pupeteer": "^0.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.4.2",
+    "jest-puppeteer": "^7.0.0",
+    "puppeteer": "^19.6.3"
   }
 }
